# bookstore

./: README  db.sqlite3  pyproject.toml
bookstore/: Dockerfile  README.md  docker-compose.yml  env.dev  settings.py
bookstore/bookstore/: settings.py
